changed to public api

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-6 mx-auto">
-      <h1>Welcome to the ECD Application</h1>
+      <h1>ECD Application</h1>
       <p class="my-5">
         User login status:
         <strong>{{
